@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: gplt_x11.c,v 1.180 2007/06/29 04:50:31 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: gplt_x11.c,v 1.181 2007/09/27 18:14:42 sfeam Exp $"); }
 #endif
 
 #define X11_POLYLINE 1
@@ -4167,6 +4167,7 @@ static void
 process_configure_notify_event(XEvent *event)
 {
     plot_struct *plot;
+    int force_redraw = 0;
 
     /* Filter down to the last ConfigureNotify event */
     XSync(dpy, False);
@@ -4198,24 +4199,26 @@ process_configure_notify_event(XEvent *event)
 	     * ourselves: */
 	    if (w == plot->width
 	    && (h == plot->gheight || h == plot->gheight + vchar)) {
-		/* most likely, it's a resize for showing/hiding
-		 * the status line: test whether the height is now
-		 * correct; if not, start another resize: */
+		/* most likely, it's a resize for showing/hiding the status line.
+		 * Test whether the height is now correct; if not, start another resize. */
+		plot->resizing = FALSE;
 		if (w == plot->width
 		&& h == plot->gheight + (plot->str[0] ? vchar : 0)) {
-		    plot->resizing = FALSE;
+			/* Was successful, status line can be drawn without rescaling plot. */
+			plot->height = h;
+			return;
 		} else {
-		    XResizeWindow(dpy, plot->window, plot->width,
-				plot->gheight + (plot->str[0] ? vchar : 0));
+			/* Possibly, a resize attempt _failed_ because window manager denied it.
+			   Resizing again goes into a vicious endless loop!
+			   (Seen with fluxbox-1.0.0 and a tab group of gnuplot windows.) */
+			/* Instead of just appending the status line, redraw/scale the plot. */
+			force_redraw = TRUE;
 		}
-		plot->height = h;
-		return;
-		}
-	    plot->resizing = FALSE;
+	    }
 	}
 #endif
 
-	if (w > 1 && h > 1 && (w != plot->width || h != plot->height)) {
+	if (w > 1 && h > 1 && (force_redraw || w != plot->width || h != plot->height)) {
 
 	    plot->width = w;
 	    plot->height = h;
